finalium "improvements", if you call those improvements

--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -24,12 +24,25 @@
 	"You could create one!": "You could create one!",
 
 	"Edit upload": "Edit upload",
-	"Enter the updated title and description of your upload.": "Enter the updated title and description of your upload.",
-	" Title": " Title",
-	" Description": " Description",
+	"Edit your post": "Edit your post",
+	"Enter the new information for your post.": "Enter the new information for your post.",
+	"Title": "Title",
+	"Description": "Description",
 	"Save": "Save",
 
+	"Welcome to %s, %s": "Welcome to %s, %s",
+	"s": "s",
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+	"Welcome to %s": "Welcome to %s",
+	"Get started": "Get started",
 	"Login": "Login",
+	"Options successfully saved!": "Options successfully saved!",
+	"Browse more": "Browse more",
+	"Randomly selected posts": "Randomly selected posts",
+	"This instance does not currently have any uploaded posts.": "This instance does not currently have any uploaded posts.",
+
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
 	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
 	"Username": "Username",
@@ -73,7 +86,6 @@
 	"Profile": "Profile",
 	"Profile picture": "Profile picture",
 	"Display name": "Display name",
-	"Description": "Description",
 	"Markdown is allowed.": "Markdown is allowed.",
 	"Username color": "Username color",
 	"Profile options are not available to banned users.": "Profile options are not available to banned users.",
@@ -91,36 +103,18 @@
 	"Upload": "Upload",
 	"Upload a post": "Upload a post",
 	"Enter the required information and select the file for your post.": "Enter the required information and select the file for your post.",
-	"Title": "Title",
 	"Tags (optional)": "Tags (optional)",
 	"Select file": "Select file",
 	"Most popular video and image formats should be supported.": "Most popular video and image formats should be supported.",
 	"Skip processing (Debug, MP4 only)": "Skip processing (Debug, MP4 only)",
 
-	"Edit my settings": "Edit my settings",
-	"View user page as viewer": "View user page as viewer",
-	"s": "s",
-	"%s follower%s": "%s follower%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
-	"Edit profile": "Edit profile",
-	"Unfollow": "Unfollow",
-	"Follow": "Follow",
-	"Marked all notifications as read.": "Marked all notifications as read.",
-	"Settings successfully saved!": "Settings successfully saved!",
-	"About this user": "About this user",
-	"There are currently no uploads by %s.": "There are currently no uploads by %s.",
-	"Registered on": "Registered on",
-	"Last logged in": "Last logged in",
-	"Enter comment here.": "Enter comment here.",
-	"Comment": "Comment",
-
 	"en-US": "en-US",
+	"Follow": "Follow",
+	"Unfollow": "Unfollow",
 	"Sorry %s, you are banned from %s.": "Sorry %s, you are banned from %s.",
 	"This ban is not set to expire.": "This ban is not set to expire.",
 	"Build": "Build",
 	"© openSB contributors": "© openSB contributors",
-	"What's new": "What's new",
 	"Running on Git commit: ": "Running on Git commit: ",
 	"User agent": "User agent",
 	"Browser being used": "Browser being used",
@@ -133,33 +127,37 @@
 	"Show replies": "Show replies",
 	"Reply": "Reply",
 
+	"Write your comment here.": "Write your comment here.",
+	"Comment": "Comment",
+
 	"This video should be processing.": "This video should be processing.",
 	"To view this video please enable JavaScript.": "To view this video please enable JavaScript.",
 
 	"by": "by",
 	"views": "views",
 
-	"More videos": "More videos",
+	"More": "More",
 
-	"Edit": "Edit",
+	"Edit post's information": "Edit post's information",
 
-	"Studio": "Studio",
 	"Sign Out": "Sign Out",
 	"Create Account": "Create Account",
 	"Sign In": "Sign In",
 
-	"Welcome to %s, %s": "Welcome to %s, %s",
-	"Welcome to %s": "Welcome to %s",
-	"Get started": "Get started",
-	"Options successfully saved!": "Options successfully saved!",
-	"Randomly selected uploads": "Randomly selected uploads",
-	"No uploads.": "No uploads.",
+	"Edit my settings": "Edit my settings",
+	"View user page as viewer": "View user page as viewer",
+	"Edit profile": "Edit profile",
+	"Marked all notifications as read.": "Marked all notifications as read.",
+	"Settings successfully saved!": "Settings successfully saved!",
+	"Registered on": "Registered on",
+	"Last logged in": "Last logged in",
+	"There are currently no posts by %s.": "There are currently no posts by %s.",
+	"Enter comment here.": "Enter comment here.",
 
+	"%s views": "%s views",
+	"%s favorites": "%s favorites",
 	"%s followers": "%s followers",
 	"Published on %s": "Published on %s",
-	"Category": "Category",
-	"Suggestions": "Suggestions",
-	"More": "More",
 
 	"Like": "Like",
 	"Dislike": "Dislike",
@@ -167,11 +165,11 @@
 
 	"Log out": "Log out",
 
-	"Latest Videos": "Latest Videos",
-	"Qobo Videos": "Qobo Videos",
-	"No uploaded videos.": "No uploaded videos.",
+	"About this user": "About this user",
+	"There are currently no uploads by %s.": "There are currently no uploads by %s.",
 
 	"About": "About",
+	"Category": "Category",
 	"Rating ratio": "Rating ratio",
 	"Last viewed": "Last viewed",
 	"Favorites": "Favorites",
@@ -181,7 +179,6 @@
 	"Sign in to your account": "Sign in to your account",
 	"Sign in": "Sign in",
 
-	"%s views": "%s views",
 	"Uploaded on %s": "Uploaded on %s",
 
 	"Banned user, can't continue.": "Banned user, can't continue.",
