--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -32,17 +32,18 @@
 	"Description": "Description",
 	"Save": "Save",
 
-	"Welcome to %s, %s": "Welcome to %s, %s",
 	"s": "s",
 	"%s follower%s": "%s follower%s",
 	"no": "no",
-	"%s view%s": "%s view%s",
+	"%s submission%s": "%s submission%s",
 	"Welcome to %s": "Welcome to %s",
 	"Get started": "Get started",
 	"Login": "Login",
 	"Options successfully saved!": "Options successfully saved!",
 	"Browse more": "Browse more",
+	"Your follow's submissions": "Your follow's submissions",
 	"Randomly selected submissions": "Randomly selected submissions",
+	"Either you're not following anyone, or none of your follows have submissions.": "Either you're not following anyone, or none of your follows have submissions.",
 	"This instance currently lacks submissions.": "This instance currently lacks submissions.",
 
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
@@ -78,12 +79,13 @@
 
 	"Settings": "Settings",
 	"Your account": "Your account",
-	"Setting name": "Setting name",
-	"Setting": "Setting",
+	"Option": "Option",
+	"Value": "Value",
 	"Email address": "Email address",
 	"Current password": "Current password",
 	"New password": "New password",
 	"Confirm new password": "Confirm new password",
+	"Export your user data": "Export your user data",
 	"Your profile": "Your profile",
 	"Profile picture": "Profile picture",
 	"Display name": "Display name",
@@ -109,15 +111,18 @@
 	"Most popular video and image formats should be supported.": "Most popular video and image formats should be supported.",
 	"Skip processing (Debug, MP4 only)": "Skip processing (Debug, MP4 only)",
 
+	"User data export": "User data export",
+
 	"en-US": "en-US",
 	"Follow": "Follow",
 	"Unfollow": "Unfollow",
 	"Sorry %s, you are banned from %s.": "Sorry %s, you are banned from %s.",
 	"This ban is not set to expire.": "This ban is not set to expire.",
 	"© openSB contributors": "© openSB contributors",
+	"Privacy Policy": "Privacy Policy",
 	"Running build %s (Git commit %s)": "Running build %s (Git commit %s)",
 	"User agent": "User agent",
-	"Browser being used": "Browser being used",
+	"Current browser": "Current browser",
 	"Unknown browser": "Unknown browser",
 	"Debug": "Debug",
 	"It is risky to screenshot this due to security reasons, so please don't.": "It is risky to screenshot this due to security reasons, so please don't.",
@@ -145,6 +150,7 @@
 
 	"Edit my settings": "Edit my settings",
 	"View user page as viewer": "View user page as viewer",
+	"%s view%s": "%s view%s",
 	"Marked all notifications as read.": "Marked all notifications as read.",
 	"Settings successfully saved!": "Settings successfully saved!",
 	"Registered on": "Registered on",
